--- a/package.json
+++ b/package.json
@@ -1,20 +1,49 @@
 {
     "name": "completer",
-    "title": "Completer",
     "description": "A jQuery auto complete plugin.",
-    "version": "0.0.3",
-    "author": "Fengyuan Chen",
+    "version": "0.1.0",
+    "keywords": [
+        "auto complete",
+        "jquery",
+        "plugin",
+        "html",
+        "css",
+        "javacript",
+        "front-end",
+        "web",
+        "development"
+    ],
+    "author": {
+        "name": "Fengyuan Chen",
+        "url": "https://github.com/fengyuanchen"
+    },
     "homepage": "https://github.com/fengyuanchen/completer",
-    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/fengyuanchen/completer.git"
+    },
+    "bugs": {
+        "url": "https://github.com/fengyuanchen/completer/issues"
+    },
+    "license": {
+        "type": "MIT",
+        "url": "https://github.com/fengyuanchen/completer/blob/master/LICENSE.md"
+    },
+    "dependencies": {
+        "jquery": ">= 1.9.0"
+    },
     "devDependencies": {
-        "grunt": "~0.4.2",
-        "grunt-banner": "~0.2.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-jshint": "~0.8.0",
-        "grunt-contrib-uglify": "~0.3.2",
+        "grunt": "~0.4.5",
+        "grunt-autoprefixer": "~1.0.0",
+        "grunt-banner": "~0.2.3",
+        "grunt-contrib-clean": "~0.6.0",
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-contrib-uglify": "~0.5.1",
         "grunt-contrib-csslint": "~0.2.0",
-        "grunt-contrib-cssmin": "~0.8.0",
+        "grunt-contrib-cssmin": "~0.10.0",
         "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-watch": "~0.5.3"
+        "grunt-contrib-watch": "~0.6.1",
+        "grunt-csscomb": "~2.0.1",
+        "load-grunt-tasks": "~0.6.0"
     }
 }
