--- a/bower.json
+++ b/bower.json
@@ -1,39 +1,35 @@
 {
-    "name": "completer",
-    "version": "0.1.0",
-    "homepage": "https://github.com/fengyuanchen/completer",
-    "authors": [
-        "Fengyuan Chen"
-    ],
-    "description": "A jQuery auto complete plugin.",
-    "main": [
-        "dist/completer.js",
-        "dist/completer.css"
-    ],
-    "keywords": [
-        "auto complete",
-        "jquery",
-        "plugin",
-        "html",
-        "css",
-        "javacript",
-        "front-end",
-        "web",
-        "development"
-    ],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests",
-        "build",
-        "release",
-        "demos",
-        "docs"
-    ],
-    "dependencies": {
-        "jquery": ">= 1.9.0"
-    }
+  "name": "completer",
+  "version": "0.1.1",
+  "homepage": "https://github.com/fengyuanchen/completer",
+  "authors": "Fengyuan Chen",
+  "description": "A jQuery auto complete plugin.",
+  "main": "dist/completer.js",
+  "keywords": [
+    "auto",
+    "complete",
+    "jquery",
+    "plugin",
+    "html",
+    "css",
+    "javacript",
+    "front-end",
+    "web",
+    "development"
+  ],
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests",
+    "build",
+    "release",
+    "demos",
+    "docs"
+  ],
+  "dependencies": {
+    "jquery": ">= 1.9.0"
+  }
 }
