--- a/.csslintrc
+++ b/.csslintrc
@@ -1,13 +1,19 @@
 {
   "adjoining-classes": false,
-  "box-model": false,
   "box-sizing": false,
+  "box-model": false,
   "compatible-vendor-prefixes": false,
-  "duplicate-background-images": false,
-  "import": false,
+  "floats": false,
+  "font-sizes": false,
+  "gradients": false,
   "important": false,
+  "known-properties": false,
   "outline-none": false,
-  "overqualified-elements": false,
-  "star-property-hack": false,
-  "text-indent": false
+  "qualified-headings": false,
+  "regex-selectors": false,
+  "shorthand": false,
+  "text-indent": false,
+  "unique-headings": false,
+  "universal-selector": false,
+  "unqualified-attributes": false
 }
